# mulu

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE.txt  LICENSE-MIT.txt  Mulu.icns  README.md  README.zh-CN.md  minisign.pub  package-mac.sh  pubkey.asc  shell.nix
.github/workflows/: ci.yml  release.yml  sync-readme.yml
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages
locales/: app.yml
src/: file_browser.rs  format.rs  main.rs  model.rs  update_check.rs
src/mtp/: client.rs  hotplug.rs  mod.rs  runtime.rs  types.rs
src/mtp_browser/: actions.rs  mod.rs  sidebar.rs  status_bar.rs  table.rs  toolbar.rs
