[package]
name = "mulu"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
mtp-rs = "0.13.1"
nusb = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "fs", "sync"] }
bytes = "1"
futures = "0.3"
rust-i18n = "4"
sys-locale = "0.3"

[package.metadata.packager]
product-name = "Mulu"
identifier = "net.yangkx.mulu"
before-packaging-command = "cargo build --release"
icons = ["icon.png"]

[package.metadata.packager.macos]
minimum-system-version = "10.15"

# `gpui` 0.2.2 pins `core-foundation = "=0.10.0"`,
# `mtp-rs` v0.11.0 -> `nusb` v0.2 use `core-foundation = "0.10.1"`.
# this repo patch it to 0.10.0 to accept the same version until upstream dependencies converge.
[patch.crates-io]
nusb = { git = "https://github.com/yangkx1024/nusb" }
