[package]
name = "mulu"
version = "1.1.2"
edition = "2024"

[features]
default = ["updater"]
# In-app update checker (pings GitHub releases). Mac App Store builds must disable
# this to comply with guideline 2.4.5 — the store handles updates itself.
updater = ["dep:ureq", "dep:serde", "dep:semver"]

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
mtp-rs = "0.13.1"
nusb = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "fs", "sync"] }
bytes = "1"
futures = "0.3"
rust-i18n = "4"
sys-locale = "0.3"
ureq = { version = "2", default-features = false, features = ["tls", "json"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
semver = { version = "1", optional = true }

[package.metadata.packager]
product-name = "Mulu"
identifier = "net.yangkx.mulu"
before-packaging-command = "cargo build --release"
icons = [
    "linux-icons/32x32.png",
    "linux-icons/128x128.png",
    "linux-icons/256x256.png",
    "linux-icons/512x512.png",
    "linux-icons/1024x1024.png",
    "Mulu.icns",
]
formats = ["deb", "pacman", "dmg"]
category = "Utility"

[package.metadata.packager.macos]
minimum-system-version = "12.0"

[package.metadata.packager.deb]
depends = [
  "libxkbcommon0",
  "libxkbcommon-x11-0",
  "libfontconfig1",
  "libfreetype6",
  "libxcb1",
  "libwayland-client0",
]

[package.metadata.packager.pacman]
depends = [
  "libxkbcommon",
  "fontconfig",
  "freetype2",
  "libxcb",
  "wayland",
]

# `gpui` 0.2.2 pins `core-foundation = "=0.10.0"`,
# `mtp-rs` v0.11.0 -> `nusb` v0.2 use `core-foundation = "0.10.1"`.
# this repo patch it to 0.10.0 to accept the same version until upstream dependencies converge.
[patch.crates-io]
nusb = { git = "https://github.com/yangkx1024/nusb" }

# Point to my fork with patch that removes legacy window blur API which causes
# App Store review rejection.
[patch."https://github.com/zed-industries/zed"]
gpui = { git = "https://github.com/yangkx1024/zed", branch = "drop-legacy-window-blur" }
gpui_platform = { git = "https://github.com/yangkx1024/zed", branch = "drop-legacy-window-blur" }
gpui_web = { git = "https://github.com/yangkx1024/zed", branch = "drop-legacy-window-blur" }
gpui_macros = { git = "https://github.com/yangkx1024/zed", branch = "drop-legacy-window-blur" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
